--- a/ObjectDetection/Base.lproj/Main.storyboard
+++ b/ObjectDetection/Base.lproj/Main.storyboard
@@ -15,6 +15,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pHX-Xa-umc">
+                                <rect key="frame" x="164.5" y="607" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="lAJ-ue-YZR"/>
+                                </constraints>
+                                <state key="normal" title="Capture"/>
+                            </button>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wSb-q8-6Ds" userLabel="Video Preview">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -23,6 +30,11 @@
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="pHX-Xa-umc" secondAttribute="bottom" constant="30" id="8fi-jF-Yuy"/>
+                            <constraint firstItem="pHX-Xa-umc" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="oK4-b1-eFU"/>
+                            <constraint firstItem="pHX-Xa-umc" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.122667" id="sHZ-JS-W5O"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
@@ -32,36 +44,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="140" y="133.5832083958021"/>
-        </scene>
-        <!--Capture View Controller-->
-        <scene sceneID="gUh-wM-80o">
-            <objects>
-                <viewController storyboardIdentifier="OCRCaptureViewController" id="7NH-fc-UcI" customClass="OCRCaptureViewController" customModule="ObjectDetection" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="jd8-eP-WFN">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="mrR-6T-I2I"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="uVd-GU-8KW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="868" y="134"/>
-        </scene>
-        <!--Annotate View Controller-->
-        <scene sceneID="DnQ-sv-S0n">
-            <objects>
-                <viewController storyboardIdentifier="AnnotateViewController" id="pHg-SJ-0JF" customClass="AnnotateViewController" customModule="ObjectDetection" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="omT-Rv-cCo">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="HbL-hR-XPl"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Dbq-2I-PKw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1595" y="138"/>
         </scene>
     </scenes>
     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
