--- a/ObjectDetection/Base.lproj/Main.storyboard
+++ b/ObjectDetection/Base.lproj/Main.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gQG-ww-8Gh">
-    <device id="retina4_7" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="gQG-ww-8Gh">
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -12,7 +11,7 @@
             <objects>
                 <navigationController id="gQG-ww-8Gh" customClass="CoordinatorNavigationController" customModule="ObjectDetection" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="9zY-F9-3Ok">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                 </navigationController>
@@ -24,19 +23,23 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController storyboardIdentifier="CameraController" id="BYZ-38-t0r" customClass="CameraController" customModule="ObjectDetection" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="eBZ-bk-t0R"/>
+                        <viewControllerLayoutGuide type="bottom" id="5N7-Rd-rok"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pHX-Xa-umc">
-                                <rect key="frame" x="164.5" y="607" width="46" height="30"/>
+                                <rect key="frame" x="181.66666666666666" y="802" width="50.666666666666657" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="lAJ-ue-YZR"/>
                                 </constraints>
                                 <state key="normal" title="Capture"/>
                             </button>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wSb-q8-6Ds" userLabel="Video Preview">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <accessibility key="accessibilityConfiguration" label="Video Preview"/>
@@ -44,11 +47,10 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="pHX-Xa-umc" secondAttribute="bottom" constant="30" id="8fi-jF-Yuy"/>
-                            <constraint firstItem="pHX-Xa-umc" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="oK4-b1-eFU"/>
+                            <constraint firstItem="5N7-Rd-rok" firstAttribute="top" secondItem="pHX-Xa-umc" secondAttribute="bottom" constant="30" id="8fi-jF-Yuy"/>
+                            <constraint firstItem="pHX-Xa-umc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="oK4-b1-eFU"/>
                             <constraint firstItem="pHX-Xa-umc" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.122667" id="sHZ-JS-W5O"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="videoPreview" destination="wSb-q8-6Ds" id="M5X-oq-wwY"/>
@@ -56,22 +58,43 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-462" y="158"/>
+            <point key="canvasLocation" x="-615" y="158"/>
         </scene>
-        <!--Photo Controller-->
+        <!--Report Controller-->
         <scene sceneID="QKa-2t-1Q8">
             <objects>
-                <viewController storyboardIdentifier="PhotoController" id="Yqd-2e-Xtj" customClass="PhotoController" customModule="ObjectDetection" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ReportController" id="Yqd-2e-Xtj" customClass="ReportController" customModule="ObjectDetection" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="btr-YU-b5H"/>
+                        <viewControllerLayoutGuide type="bottom" id="46j-Ke-ocu"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Siz-PO-DRS">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Hy-uk-ZOM" customClass="AnnotateView" customModule="ObjectDetection" customModuleProvider="target">
+                                <rect key="frame" x="-2" y="6" width="418" height="885"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="cropDelegate" destination="Yqd-2e-Xtj" id="l4j-BT-nfR"/>
+                                </connections>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="PBU-vo-AjA"/>
+                        <constraints>
+                            <constraint firstItem="2Hy-uk-ZOM" firstAttribute="height" secondItem="Siz-PO-DRS" secondAttribute="height" multiplier="1.35082" constant="-325.33471999999983" id="EY8-ts-MAK"/>
+                            <constraint firstItem="2Hy-uk-ZOM" firstAttribute="centerX" secondItem="Siz-PO-DRS" secondAttribute="centerX" id="JL6-Z1-Pzw"/>
+                            <constraint firstItem="2Hy-uk-ZOM" firstAttribute="width" secondItem="Siz-PO-DRS" secondAttribute="width" multiplier="1.104" constant="-39.000000000000057" id="N9l-XH-XbQ"/>
+                            <constraint firstItem="2Hy-uk-ZOM" firstAttribute="centerY" secondItem="Siz-PO-DRS" secondAttribute="centerY" constant="0.5" id="dn8-sv-lng"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="annotationView" destination="2Hy-uk-ZOM" id="ePf-jK-jOe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AUb-So-R21" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="262" y="158"/>
+            <point key="canvasLocation" x="260.86956521739131" y="157.36607142857142"/>
         </scene>
     </scenes>
     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
